--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="ui inverted small menu">
+      <div class="ui container">
+      <%= render 'layouts/navigation'%>
+    </div>
+    </div>
+    <div class="ui container">
+      <%= yield %>
+    </div>  
   </body>
 </html>
